# CineEmbed-A-Multi-Modal-Unsupervised-Film-Recommendation-System

./: .env.example  .gitignore  README.md  eda_v2.ipynb  pyproject.toml  pyrightconfig.json
app/: globals.css  layout.tsx  page.tsx
artifacts/: backbones.json  director_profile_metadata.json  feature_metadata.json  pipeline_version.json  scalers.pkl
components/: empty-state.tsx  film-poster.tsx  search-bar.tsx  selected-film-panel.tsx  sidebar.tsx  similar-films-panel.tsx
docs/: FINDINGS.md  PROGRESS.md  demo-script.md
frontend/: next.config.mjs  package.json  pnpm-lock.yaml
mermaid/: 01-hero-high-level-architecture.md  02-data-engineering-pipeline.md  03-multimodal-model-architecture.md  04-three-tier-model-taxonomy.md  05-three-axis-evaluation-methodology.md
notebooks/: 00_colab_setup.ipynb  01_smoke_test.ipynb  02_train_ae.ipynb  03_train_contrastive.ipynb  04_train_dec.ipynb  05_results.ipynb  06_umap.ipynb  07_round1_finetune.ipynb  08_round2_ae_zsweep.ipynb
scripts/: backfill_wandb.py  build_backbones_metadata.py  build_gallery.py  build_index.py  demo-smoke.sh  dev-up.sh  enrich_films.py  package-artifacts.sh  research_clustering.py  setup-teammate.sh  train_contrastive.py
tests/: conftest.py  test_api_clusters.py  test_api_core.py  test_api_cosine_dist.py  test_api_film_detail.py  test_api_gallery.py  test_api_models.py  test_api_similar.py  test_backbone.py  test_cluster_meta.py  test_data.py  test_enrich.py  test_eval.py  test_heads.py  test_import.py  test_keywords.py  test_losses.py  test_search.py  test_tmdb.py  test_train.py  (+1 more)
(+100 files in other folders)
